# rustls-platform-verifier

./: Cargo.toml
android-release-support/: Cargo.toml
rustls-platform-verifier/: Cargo.toml
rustls-platform-verifier/examples/: update-certs.rs
rustls-platform-verifier/src/: lib.rs
rustls-platform-verifier/src/tests/: ffi.rs  mod.rs
rustls-platform-verifier/src/tests/verification_real_world/: mod.rs
rustls-platform-verifier/src/verification/: android.rs  apple.rs  others.rs  windows.rs
