[package]
name = "rustls-platform-verifier-android"
version = "0.1.1"
description = "The internal JVM support component of the rustls-platform-verifier crate. You shouldn't depend on this directly."
repository = "https://github.com/rustls/rustls-platform-verifier"
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true

# Explicitly include the Maven local repository for the Android component.
# While not checked into the repository, it is generated for releases and other contexts.
include = [
    "src/*",
    "maven/pom.xml",
    "maven/rustls/rustls-platform-verifier/**/",
    "maven/rustls/rustls-platform-verifier/maven-metadata-local.xml",
]

[dependencies]
