[package]
name = "rustls-platform-verifier"
version = "0.6.2"
description = "rustls-platform-verifier supports verifying TLS certificates in rustls with the operating system verifier"
keywords = ["tls", "certificate", "verification", "os", "native"]
repository = "https://github.com/rustls/rustls-platform-verifier"
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "rustls_platform_verifier"

[features]
# Enables a C interface to use for testing where `cargo` can't be used.
# This feature is not stable, nor is the interface exported when it is enabled.
# Do not rely on this or use it in production.
ffi-testing = ["android_logger", "rustls-ring"]
# Enables APIs that expose lower-level verifier types for debugging purposes.
dbg = []
# Enables `log::debug` base64-encoded logging of all end-entity certificates processed
# by the platform's verifier.
cert-logging = ["base64"]
# Used for nicely documenting the Android-specific APIs. This feature is not stable.
docsrs = ["jni", "once_cell"]

[dependencies]
rustls = { workspace = true }
log = { workspace = true }
base64 = { workspace = true, optional = true } # Only used when the `cert-logging` feature is enabled.
jni = { workspace = true, optional = true } # Only used during doc generation
once_cell = { workspace = true, optional = true } # Only used during doc generation
rustls-ring = { workspace = true, optional = true } # Only used during testing.

[target.'cfg(all(unix, not(target_os = "android"), not(target_vendor = "apple"), not(target_arch = "wasm32")))'.dependencies]
rustls-native-certs = { workspace = true }
webpki = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
once_cell = { workspace = true }
rustls-platform-verifier-android = { workspace = true }
jni = { workspace = true }
webpki = { workspace = true }
android_logger = { workspace = true, optional = true } # Only used during testing.

[target.'cfg(target_arch = "wasm32")'.dependencies]
webpki = { workspace = true }
webpki-root-certs = { workspace = true }

[target.'cfg(any(target_vendor = "apple"))'.dependencies]
core-foundation = { workspace = true }
core-foundation-sys = { workspace = true }
security-framework = { workspace = true }
security-framework-sys = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
rustls-ring = { workspace = true }
webpki-root-certs = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["dbg", "docsrs"]
